[package]
name = "bevy-radial-bar"
version = "0.1.0"
edition = "2021"
authors = ["Tsailenn"]
license = "MIT"
description = "Radial bar component. Provides simplified mesh generation and its handle. Perfect for indicating health, countdown, and more."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.7" }
rand = "0.8"
